# ballV1.1

./: ejemplo.cpp  main.cpp
BALL-TREE/: CMakeLists.txt
BALL-TREE/src/: ball_tree.h  datos.h  main.cpp  pca.h  pca_test.cpp
